<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.register.RegisterFragment">

    <ImageView
        android:id="@+id/ivIconApp"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/baseline_library_books_24"
        android:transitionName="APP_IMAGE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/accent"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/tvStoryApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:transitionName="APP_NAME"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivIconApp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/accent"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/light"
        app:layout_constraintTop_toBottomOf="@+id/tvStoryApp" />

    <com.fakhrimf.storyapp.utils.customview.UsernameEditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/accent"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/light"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <com.fakhrimf.storyapp.utils.customview.PasswordEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/accent"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/light"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/accent"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.Large.DoubleBounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:SpinKit_Color="@color/accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>